maven -> gradle, java 11 -> java 8