@@ -21,6 +21,7 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import com.ezylang.evalex.parser.ParseException;
 import java.math.BigDecimal;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -30,7 +31,7 @@ class ExpressionEvaluatorStructureTest extends BaseExpressionEvaluatorTest {
 
   @Test
   void testStructureScientificNumberDistinction() throws EvaluationException, ParseException {
-    Map<String, BigDecimal> structure = Map.of("environment_id", new BigDecimal(12345));
+    Map<String, BigDecimal> structure = Collections.singletonMap("environment_id", new BigDecimal(12345));
     Expression expression = new Expression("order.environment_id").with("order", structure);
 
     assertThat(expression.evaluate().getStringValue()).isEqualTo("12345");
@@ -54,7 +55,7 @@ class ExpressionEvaluatorStructureTest extends BaseExpressionEvaluatorTest {
 
   @Test
   void testSimpleStructure() throws ParseException, EvaluationException {
-    Map<String, BigDecimal> structure = Map.of("b", new BigDecimal(99));
+    Map<String, BigDecimal> structure = Collections.singletonMap("b", new BigDecimal(99));
 
     Expression expression = createExpression("a.b").with("a", structure);
 
@@ -65,7 +66,7 @@ class ExpressionEvaluatorStructureTest extends BaseExpressionEvaluatorTest {
   void testTripleStructure() throws ParseException, EvaluationException {
     Map<String, Map<String, BigDecimal>> structure = new HashMap<>();
 
-    Map<String, BigDecimal> subStructure = Map.of("c", new BigDecimal(95));
+    Map<String, BigDecimal> subStructure = Collections.singletonMap("c", new BigDecimal(95));
 
     structure.put("b", subStructure);
 
@@ -109,7 +110,7 @@ class ExpressionEvaluatorStructureTest extends BaseExpressionEvaluatorTest {
     Map<String, Object> structure = new HashMap<>();
     Map<String, Object> subStructure = new HashMap<>();
     subStructure.put("prop c", 99);
-    structure.put("prop b", List.of(subStructure));
+    structure.put("prop b", Collections.singletonList(subStructure));
 
     Expression expression = createExpression("a.\"prop b\"[0].\"prop c\"").with("a", structure);
 
@@ -118,7 +119,7 @@ class ExpressionEvaluatorStructureTest extends BaseExpressionEvaluatorTest {
 
   @Test
   void testStructureWithSpaceInNameAndArrayAccess() throws EvaluationException, ParseException {
-    Map<String, List<Integer>> structure = Map.of("b prop", Arrays.asList(1, 2, 3));
+    Map<String, List<Integer>> structure = Collections.singletonMap("b prop", Arrays.asList(1, 2, 3));
 
     Expression expression = createExpression("a.\"b prop\"[1]").with("a", structure);
 
